--- a/example/Makefile
+++ b/example/Makefile
@@ -1,12 +1,18 @@
 SOURCES=$(wildcard *.saty)
 TARGETS=$(patsubst %.saty,%.pdf,$(SOURCES))
 
+SATYSFI_OPTS+=-b
+
+ifdef SATYSFI_RUNTIME
+	SATYSFI_OPTS+=-C "$(SATYSFI_RUNTIME)"
+endif
+
 .PHONY: all
 
 all: $(TARGETS)
 
 %.pdf: %.saty
-	satysfi -b $< -o $@
+	satysfi $(SATYSFI_OPTS) $< -o $@
 
 .PHONY: clean
 
